# Veritrans-ios-sdk

./: .gitignore  .travis.yml  LICENSE  MidtransCoreKit.podspec  MidtransKit.podspec  Package.swift  Podfile  README.md  id_alfamart.plist  readme.md
Core/: MIDClient.h  MIDClient.m
Demo/: .travis.yml  Podfile  UIFlowSampleViewController.m
DemoDev/: UIFlowSampleViewController.h
DemoTest/: Podfile
MIdtransWidget/: BaseWidgetViewController.h  BaseWidgetViewController.m
Midtrans.xcodeproj/: project.pbxproj
MidtransCoreKit/: MidtransCoreKit.podspec  Podfile  PrivacyInfo.xcprivacy  VTLuhn.h  VTLuhn.m  VTTokenizeRequest.h  VTTokenizeRequest.m  code_usage.md
MidtransCoreKit/MidtransCoreKit/Clickstream/SwiftProtobuf/: BUILD.bazel  README.md
MidtransCoreKit/MidtransCoreKit/Clickstream/SwiftProtobuf/Sources/SwiftProtobuf/: any.pb.swift  api.pb.swift  descriptor.pb.swift  duration.pb.swift  empty.pb.swift  field_mask.pb.swift  source_context.pb.swift  struct.pb.swift  timestamp.pb.swift  type.pb.swift  wrappers.pb.swift
MidtransDemo/: Cartfile  Cartfile.resolved  Podfile
MidtransKit/: MidtransKit.podspec  Podfile  PrivacyInfo.xcprivacy  code_usage.md  code_usage_swift.md
MidtransPodpec/: MidtransCoreKit.podspec  MidtransKit.podspec
MidtransSDK/: AppDelegate.m  Podfile  readme.md
MidtransSDK.xcodeproj/: project.pbxproj
MidtransSDKTests/: MIDCardlessCreditTest.m  MIDCheckoutTest.m  MIDEWalletTest.m  MIDKlikbcaTest.m  MIDMandiriClickpayTest.m  MIDStoreTest.m
Old/: Podfile  README.md
Podpecs/: MidtransCoreKit.podspec  MidtransKit.podspec
SDK/: Podfile
(+2848 files in other folders)
